finished with Dimensionality Reduction

--- a/main_Crypto.ipynb
+++ b/main_Crypto.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "44fee17e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initial imports\n",
+    "#!pip install plotly\n",
     "import pandas as pd\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "c69ceba7",
    "metadata": {},
    "outputs": [
@@ -187,7 +188,7 @@
        "[1252 rows x 6 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "53127af3",
    "metadata": {},
    "outputs": [],
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "3c6ccdec",
    "metadata": {},
    "outputs": [
@@ -224,7 +225,7 @@
        "Name: IsTrading, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "81d3995d",
    "metadata": {},
    "outputs": [
@@ -248,7 +249,7 @@
        "Name: IsTrading, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,8 +261,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "07d434cf",
+   "execution_count": 6,
+   "id": "0317101b",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +404,7 @@
        "[1144 rows x 5 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,8 +417,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "0de7b40c",
+   "execution_count": 7,
+   "id": "88211c22",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +560,7 @@
        "[685 rows x 5 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,8 +573,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "c8671127",
+   "execution_count": 8,
+   "id": "28d69b4f",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +594,7 @@
        "Name: TotalCoinsMined, Length: 685, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "78d7be3f",
+   "execution_count": 9,
+   "id": "db3a3f44",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +616,7 @@
        "532"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,8 +629,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "383cf2e3",
+   "execution_count": 10,
+   "id": "0e248b2a",
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +709,7 @@
        "ETH     Ethash       PoW     1.076842e+08               0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,8 +722,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "54a092cb",
+   "execution_count": 11,
+   "id": "ab7c4256",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +956,7 @@
        "[5 rows x 98 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,33 +971,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "c5a23078",
+   "execution_count": null,
+   "id": "2cf7c2ca",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.11710817, -0.1528703 , -0.0433963 , ..., -0.0433963 ,\n",
-       "        -0.0433963 , -0.0433963 ],\n",
-       "       [-0.09396955, -0.145009  , -0.0433963 , ..., -0.0433963 ,\n",
-       "        -0.0433963 , -0.0433963 ],\n",
-       "       [ 0.52494561,  4.48942416, -0.0433963 , ..., -0.0433963 ,\n",
-       "        -0.0433963 , -0.0433963 ],\n",
-       "       ...,\n",
-       "       [-0.09561336, -0.13217937, -0.0433963 , ..., -0.0433963 ,\n",
-       "        -0.0433963 , -0.0433963 ],\n",
-       "       [-0.11694817, -0.15255998, -0.0433963 , ..., -0.0433963 ,\n",
-       "        -0.0433963 , -0.0433963 ],\n",
-       "       [-0.11710536, -0.15285552, -0.0433963 , ..., -0.0433963 ,\n",
-       "        -0.0433963 , -0.0433963 ]])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Scaling\n",
     "# Standardize your dataset so that columns that contain larger values do not unduly influence the outcome\n",
@@ -1008,7 +986,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bd5b189",
+   "id": "01970603",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform dimensionality reduction with PCA\n",
+    "pca = PCA(n_components=0.90)\n",
+    "principal_components = pca.fit_transform(X_scaled)\n",
+    "principal_components.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0c4bce9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The sum of explained variance.\n",
+    "pca.explained_variance_.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3918fc5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reduce the dataset dimensions with t-SNE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "915a35e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tsne = TSNE(perplexity=50)\n",
+    "tsne_features = tsne.fit_transform(principal_components)\n",
+    "tsne_features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79129bdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a scatter plot of the t-SNE output.\n",
+    "X = tsne_features[:,0]\n",
+    "y = tsne_features[:,1]\n",
+    "\n",
+    "plt.scatter(X,y)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd2a9926",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1016,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0288fd84",
+   "id": "d7142fd0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1024,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a8adeb8",
+   "id": "a135501a",
    "metadata": {},
    "outputs": [],
    "source": []
